# Edip

./: README.rst  index.html  params.json
Edip-1.0.0/: ChangeLog  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
Edip-1.0.0/Edip/: Edip_Controller.cpp  Edip_Controller.hpp  Edip_define.hpp  Edip_functions.cpp  Edip_functions.hpp  Edip_gui.cpp  Edip_gui.hpp  Edip_structure.hpp  Makefile.in  libedip.hpp  main.cpp
Edip-1.0.0/Edip/README/: README.html  README.rst
Edip-1.0.0/Edip/gui/: Edip_gui_events_end.cpp  Edip_gui_private.cpp  Edip_gui_process.cpp  Edip_gui_toplevels.cpp
Edip-1.0.0/Edip/gui/dialog/: Edip_dialog_colors_filters.cpp  Edip_dialog_drawning.cpp  Edip_dialog_files.cpp  Edip_dialog_files_merging.cpp  Edip_dialog_info.cpp  Edip_dialog_kernel_filters.cpp  Edip_dialog_other_filters.cpp  Edip_dialog_photography_filters.cpp
Edip-1.0.0/Edip/html-documentation/: .buildinfo  Edip Advanced Configurable Color Filters.html  Edip Advanced Configurable Filters.html  Edip Credits.html  Edip Drawing.html  Edip Files Merging.html  Edip Files.html  Edip Presentation.html  Edip Simple Filters.html  Edip Simple Settings.html  Edip To know about image processing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Edip-1.0.0/Edip/html-documentation/_sources/: Edip Advanced Configurable Color Filters.txt  Edip Advanced Configurable Filters.txt  Edip Credits.txt  Edip Drawing.txt  Edip Files Merging.txt  Edip Files.txt  Edip Presentation.txt  Edip Simple Filters.txt  Edip Simple Settings.txt  Edip To know about image processing.txt  index.txt
Edip-1.0.0/Edip/libedip/: Binary_Images.cpp  Binary_Images.hpp  Color_Filters.cpp  Color_Filters.hpp  Files_Merging.cpp  Files_Merging.hpp  Filters.cpp  Filters.hpp  HLSV_Filters.cpp  HLSV_Filters.hpp  Kernels.cpp  Kernels.hpp  Makefile.in  Photography_Filters.cpp  Photography_Filters.hpp  Resizer.cpp  Resizer.hpp  algorithm.cpp  algorithm.hpp  drawning.cpp  drawning.hpp  libedip.hpp  operations.cpp  operations.hpp
Edip-1.0.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Edip-1.0.0/opencv3/: Makefile.in
Edip-1.0.0/testcv/: Makefile.in  main.cpp
